Fix 1px gap between dribble shots

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -91,6 +91,7 @@ header {
 
         @include min-screen($tablet) {
             @include inline-block;
+            height: 194px;
             margin: 0;
             width: 260px;
         }
